--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -47,3 +47,14 @@
   justify-content: center;
   align-items: center;
 }
+
+
+.words-card{
+  border: 2px solid red;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center; 
+  flex-wrap: wrap;
+  
+} 
